# evm-indexer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.MD  docker-compose.yml
.github/workflows/: release.yml
docs/: getting_started.md  monitoring.md  troubleshooting.md
docs/installation/: install_binary.md  install_docker.md
examples/: .env.example  config.example.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/chain/: connection.rs  event_listener.rs  mod.rs
src/circuit_breaker/: mod.rs
src/db/: mod.rs  models.rs
src/decoder/: abi.rs  mod.rs
src/health/: mod.rs
src/metrics/: mod.rs
src/sync/: historical.rs
