[package]
name = "evm-indexer"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.36", features = ["full"] }
web3 = { version = "0.19", features = ["ws-tls-tokio"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
ethabi = "18.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = { version = "0.3", features = ["std"] }
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
prometheus = "0.13"
warp = "0.3"
chrono = "0.4"
metrics = "0.21"
dashmap = "5.5"
futures-util = "0.3"
rand = "0.8"
dotenv = "0.15"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
hex = "0.4"
rustc-hex = "2.1.0"
tracing-appender = "0.2.3"
async-stream = "0.3.6"
